--- a/.github/workflows/tagging-and-releasing.yaml
+++ b/.github/workflows/tagging-and-releasing.yaml
@@ -18,8 +18,6 @@ jobs:
       - name:  'Automated Github Action Version Bump'
         id: version_bump
         uses:  'rimonhanna/gh-action-bump-version@master'
-        with:
-          tag-prefix:  'v'
 
       # - name: Version Composition
       #   id: composer
@@ -50,7 +48,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ steps.version_bump.outputs.TAG }}
+          tag_name: ${{ steps.version_bump.outputs.TAG }}
           release_name: Release ${{ steps.version_bump.outputs.TAG }}
           draft: false
           prerelease: ${{ contains(github.ref, 'main') }}
