--- a/.github/workflows/tagging-and-releasing.yaml
+++ b/.github/workflows/tagging-and-releasing.yaml
@@ -15,9 +15,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name:  'Automated Github Action Version Bump'
+      - name:  Automated Github Action Version Bump
         id: version_bump
         uses:  'rimonhanna/gh-action-bump-version@master'
+
+      - name: Getting the raw version
+        id: version
+        run: |-
+          echo ::set-output name=RAW_VERSION::${{ echo steps.version_bump.outputs.TAG | cut -d 'v' -f 2 }}
+          echo ::set-output name=VERSION::${{ steps.version_bump.outputs.TAG }}
 
       # - name: Version Composition
       #   id: composer
@@ -38,7 +44,7 @@ jobs:
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         with:
-          version: ${{ steps.version_bump.outputs.TAG }}
+          version: ${{ steps.version.outputs.RAW_VERSION }}
           revision-pattern: M.m.b
           preferred-type: build
 
