--- a/.github/workflows/tagging-and-releasing.yaml
+++ b/.github/workflows/tagging-and-releasing.yaml
@@ -22,8 +22,8 @@ jobs:
       - name: Getting the raw version
         id: version
         run: |-
-          echo ::set-output name=RAW_VERSION::${{ echo steps.version_bump.outputs.TAG | cut -d 'v' -f 2 }}
-          echo ::set-output name=VERSION::${{ steps.version_bump.outputs.TAG }}
+          echo ::set-output name=RAW_VERSION::$(echo ${steps.version_bump.outputs.TAG} | cut -d 'v' -f 2)
+          echo ::set-output name=VERSION::$(echo $(steps.version_bump.outputs.TAG))
 
       # - name: Version Composition
       #   id: composer
