ci(workflow): change the installation of auto-changelog

--- a/.github/workflows/generate-changelog.yml
+++ b/.github/workflows/generate-changelog.yml
@@ -14,10 +14,15 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v2
 
+      # install auto-changelog
+      - name: Install auto-changelog
+        run: |-
+          npm install -g auto-changelog
+
       # generate the changelog file
       - name: Create/Update the file
         run: |-
-          npm run changelog
+          auto-changelog
 
       # push the changes
       - uses: EndBug/add-and-commit@v7
