ci(workflow): update changelog

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "commit": "git add . && commit",
-    "changelog": "auto-changelog"
+    "changelog": "auto-changelog -p"
   },
   "eslintConfig": {
     "extends": [
