--- a/.github/workflows/tagging-and-releasing.yaml
+++ b/.github/workflows/tagging-and-releasing.yaml
@@ -24,29 +24,7 @@ jobs:
         run: |-
           echo ::set-output name=RAW_VERSION::$(echo ${{steps.version_bump.outputs.TAG}} | cut -d 'v' -f 2)
           echo ::set-output name=VERSION::$(echo ${{steps.version_bump.outputs.TAG}})
-
-      # - name: Version Composition
-      #   id: composer
-      #   uses: juliansangillo/version-composer@v1.1
-      #   env:
-      #     ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-      #   with:
-      #     revision-pattern: M.m.b
-      #     preferred-type: build
-      #     stable-branch: main
-      #     test-branch: test
-      #     dev-branch: dev
-      #     test-tag: TEST
-      #     dev-tag: UNSTABLE
-
-      # - name: Changelog update
-      #   uses: juliansangillo/version-maestro@v1.1
-      #   env:
-      #     ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-      #   with:
-      #     version: ${{ steps.version.outputs.RAW_VERSION }}
-      #     revision-pattern: M.m.b
-      #     preferred-type: build
+          echo ::set-output name=TAG::$( [ ${{ contains(github.ref, 'dev') }} ] && echo '.UNSTABLE' || echo '' )
 
       - name: Create Release
         id: release
@@ -55,7 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.version.outputs.VERSION }}
-          release_name: Release ${{ steps.version.outputs.VERSION }}
+          release_name: Release ${{ steps.version.outputs.VERSION }}${{ steps.version.outputs.TAG }}
           draft: false
           prerelease: ${{ !contains(github.ref, 'main') }}
           body_path: ./CHANGELOG.md
