--- a/.github/workflows/tagging-and-releasing.yaml
+++ b/.github/workflows/tagging-and-releasing.yaml
@@ -32,7 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.version.outputs.VERSION }}
+          tag_name: ${{ steps.version.outputs.VERSION }}${{ steps.version.outputs.TAG }}
           release_name: Release ${{ steps.version.outputs.VERSION }}${{ steps.version.outputs.TAG }}
           draft: false
           prerelease: ${{ !contains(github.ref, 'main') }}
