ci(workflow): trying to make run test-build.yml

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -1,8 +1,10 @@
 name: Testing build Unstable versions
 on:
   push:
+    branches:
+      - "!*"
     tags:
-      - '*'
+      - "v*"
 
 jobs:
   build:
