--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -1,10 +1,6 @@
 name: Testing build Unstable versions
 on:
-  push:
-    branches:
-      - "!*"
-    tags:
-      - "v*"
+  create:
 
 jobs:
   build:
