--- a/.github/workflows/tagging-and-releasing.yaml
+++ b/.github/workflows/tagging-and-releasing.yaml
@@ -44,7 +44,7 @@ jobs:
     name: Build the app
     runs-on: ubuntu-latest
     needs: tag
-    if: ${{ contains(needs.tag.outputs.version), 'UNSTABLE') }}
+    if: ${{ contains(needs.tag.outputs.version, 'UNSTABLE') }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
