--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -18,17 +18,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Release
-        id: release
-        uses: actions/create-release@v1
+      - name: Update GitHub Release
+        uses: tubone24/update_release@v1.1.0
+        with:
+          release_name: Release ${{ steps.package-version.outputs.package-version }}
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.package-version.outputs.package-version }}
-          release_name: Release ${{ steps.package-version.outputs.package-version }}
-          draft: false
-          prerelease: false
-          body_path: ./CHANGELOG.md
+          TAG_NAME: ${{ steps.package-version.outputs.package-version }}
     outputs:
       version:  ${{ steps.package-version.outputs.package-version }}
 
