--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Get package version
         id: package-version
