--- a/.github/workflows/tagging-and-releasing.yaml
+++ b/.github/workflows/tagging-and-releasing.yaml
@@ -23,19 +23,8 @@ jobs:
         run: |-
           echo ::set-output name=RAW_VERSION::$(echo ${{steps.version_bump.outputs.TAG}} | cut -d 'v' -f 2)
           echo ::set-output name=VERSION::$(echo ${{steps.version_bump.outputs.TAG}})
-          echo ::set-output name=TAG::$( [ ${{ contains(github.ref, 'dev') }} ] && echo '.UNSTABLE' || echo '' )
+          echo ::set-output name=TAG::$( [ ${{ contains(github.ref, 'dev') }} ] && echo '-dev' || echo '' )
 
-      - name: Create Release
-        id: release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.version.outputs.VERSION }}
-          release_name: Release ${{ steps.version.outputs.VERSION }}${{ steps.version.outputs.TAG }}
-          draft: false
-          prerelease: ${{ !contains(github.ref, 'main') }}
-          body_path: ./CHANGELOG.md
     outputs:
       version: ${{ steps.version.outputs.VERSION }}${{ steps.version.outputs.TAG }}
 
@@ -43,7 +32,7 @@ jobs:
     name: Build the app
     runs-on: ubuntu-latest
     needs: tag
-    if: ${{ contains(needs.tag.outputs.version, 'UNSTABLE') }}
+    if: ${{ contains(needs.tag.outputs.version, 'dev') }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
