--- a/.github/workflows/tagging.yaml
+++ b/.github/workflows/tagging.yaml
@@ -25,8 +25,14 @@ jobs:
           dry_run: true
           default_bump_level: patch
 
+      - name: Cofiguring Git
+        run: |-
+          git config user.name $GITHUB_ACTOR
+          git config user.email gh-actions-${GITHUB_ACTOR}@github.com
+          git remote add gh-origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+
       - name: Change version
-        uses: reedyuk/npm-version@1.1.1
-        with:
-          version: ${{ steps.version-calc.outputs.next_version }}
-          git-tag-version: 'true'
+        run: |-
+          npm version ${{ steps.version-calc.outputs.next_version }} --git-tag-version=true
+          git push gh-origin --follow-tags
+          git push gh-origin --tags
