--- a/.github/workflows/tagging.yaml
+++ b/.github/workflows/tagging.yaml
@@ -16,6 +16,11 @@ jobs:
         with:
           ref: ${{ github.ref }}
 
+      - name: Cofiguring Git
+        run: |-
+          git config user.name $GITHUB_ACTOR
+          git config user.email gh-actions-${GITHUB_ACTOR}@github.com
+
       # Bump version on merging Pull Requests with specific labels. (bump:major,bump:minor,bump:patch)
       - name: Version Calculation
         if: github.event.pull_request.merged
@@ -25,19 +30,14 @@ jobs:
           dry_run: true
           default_bump_level: patch
 
-      - name: Cofiguring Git
-        run: |-
-          git config user.name $GITHUB_ACTOR
-          git config user.email gh-actions-${GITHUB_ACTOR}@github.com
-          git config core.sharedRepository true
-          git remote add gh-origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-
       - name: Change version
         uses: reedyuk/npm-version@1.1.1
         with:
           version: ${{ steps.version-calc.outputs.next_version }}
-          git-tag-version: 'true'
+          git-tag-version: 'false'
 
       - name: Push version
         run: |-
-          git push gh-origin ${{ steps.version-calc.outputs.next_version }}
+          git commit -m "ci(version): level up version"
+          git tag ${{ steps.version-calc.outputs.next_version }}
+          git push ${{ steps.version-calc.outputs.next_version }}
