--- a/.github/workflows/tagging.yaml
+++ b/.github/workflows/tagging.yaml
@@ -24,6 +24,8 @@ jobs:
         if: github.event.pull_request.merged
         id: version-calc
         uses: haya14busa/action-bumpr@v1
+        with:
+          dry_run: true
 
       - name: Change version
         uses: reedyuk/npm-version@1.1.1
